--- a/sass/breakpoints/_base.scss
+++ b/sass/breakpoints/_base.scss
@@ -355,6 +355,9 @@ section {
 		    vertical-align: top;
 		    display: table-cell;
 		    height:100%;
+		    &.align-bottom {
+		    	vertical-align: bottom;	
+		    }
 		    &.half {
 		    	width: 50%;
 		    	&.grey {
@@ -375,7 +378,7 @@ section {
 		}
 
 		.trackinfo-container {
-		    // height: 100%;
+		    height: 100%;
 		    // border: 2px solid green;
 		    box-sizing: border-box;
 		}
@@ -391,7 +394,7 @@ section {
 			display: table;
 			background-color: $bg-color-grey;
 			width: 100%;
-			padding: 1em;
+			padding: 10px;
 			height: 100%;
 			display: none;
 			// margin-top: 10px;
